<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.csantamaria.appConMenu.MenuActivity">

    <Button
        android:id="@+id/btnHelloApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/helloapp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnMensajeria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/mensajeria"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnImc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/calculadora_imc"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnBoardGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/juegos_de_mesa"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnColorMixer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/mezclador_de_colores"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnSuperhero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/superhero"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/settings"
        android:textSize="25sp" />

</LinearLayout>