<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/bgapp_background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etGame"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:hint="@string/dialog_add_game"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbCooperative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/bgapp_cooperative_category"
            android:checked="true"
            android:text="@string/cooperatives"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbDeckbuilding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/bgapp_deckbuilding_category"
            android:checked="true"
            android:text="@string/deckbuilding"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbEurogames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/bgapp_euro_category"
            android:checked="true"
            android:text="@string/eurogames"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbLCG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/bgapp_lcg_category"
            android:checked="true"
            android:text="@string/living_card_games"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbLegacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/bgapp_legacy_category"
            android:checked="true"
            android:text="@string/legacy"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAddGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_newgame_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/bgapp_accent"/>

    </RadioGroup>

</LinearLayout>